fix add item layout issues

--- a/src/app/add_item/_add_item.scss
+++ b/src/app/add_item/_add_item.scss
@@ -50,7 +50,8 @@
     }
 
     p {
-        padding-top: 4px;
+        margin: 0;
+        margin-top: 2px;
     }
 
     .photoInsert {
@@ -120,6 +121,7 @@
     flex-direction: column;
     flex-wrap: wrap;
 
+
     label {
         padding: 8px 0 8px 0;
         color: $grey5;
@@ -169,6 +171,7 @@ select {
 
 #discard-item-btn {
     @include secondaryBtn;
+    margin-bottom: 8px;
 }
 
 ::placeholder, .select {
@@ -176,6 +179,10 @@ select {
     font: $body-text;
 }
 
+
+#photoContainerText h2 {
+    margin: 0;
+}
 // Style Pop-Up Modal ************************************//
 
 #addItemPopUp {
@@ -198,6 +205,10 @@ select {
 
     #line {
         border-top: 1px solid $grey1;
+    }
+
+    h3 {
+        margin-bottom: 0;
     }
 
     .btnContainerAddItm {
